--- a/packages/preset-theme/style.css
+++ b/packages/preset-theme/style.css
@@ -27,3 +27,22 @@
   cursor: not-allowed;
   opacity: 10;
 }
+body{
+  margin: 0;
+  position: relative;
+  min-height: 100%;
+
+}
+body:has(dialog[open]){
+  overflow: hidden !important;
+  overscroll-behavior: contain;
+  position: relative !important;
+  padding-left: 0px;
+  padding-top: 0px;
+  padding-right: 0px;
+  margin-left: 0;
+  margin-top: 0;
+
+  /* FIXME: make body don't move when dialog open */
+  margin-right: 3px !important; 
+}
