--- a/packages/preset-theme/style.css
+++ b/packages/preset-theme/style.css
@@ -67,3 +67,38 @@ button, input, optgroup, select, textarea {
   margin: 0;
   padding: 0;
 }
+
+.toggle {
+  --bc: 0 0% 100%;
+  flex-shrink: 0;
+  --tglbg: hsl(var(--bc));
+  --handleoffset: calc(var(--toggle-width) / 2) ;
+  --handleoffsetcalculator: calc(var(--handleoffset) * -1);
+  --toggle-width: 3rem;
+  --togglehandleborder: 0 0;
+  height: 1.5rem;
+  width: var(--toggle-width,3rem);
+  cursor: pointer;
+  -webkit-appearance: none;
+  appearance: none;
+  border:solid;
+  border-width: 1px;
+  --un-border-opacity: .2;
+  border-color:  rgba(51,154,240,var(--un-border-opacity));
+
+  --un-bg-opacity: .5;
+  background-color:  rgba(51,154,240,var(--un-bg-opacity));
+  transition-duration: .3s;
+  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+  border-radius: var(--rounded-badge, 1.9rem);
+  transition: background, box-shadow var(--animation-input, .2s) ease-in-out;
+  box-shadow: var(--handleoffsetcalculator) 0 0 2px var(--tglbg) inset, 0 0 0 2px var(--tglbg) inset, var(--togglehandleborder);
+}
+
+.toggle:checked,
+.toggle[data-state~='checked']
+{
+  --handleoffsetcalculator: var(--handleoffset);
+  --un-border-opacity: 1;
+  --un-bg-opacity: 1;
+}
