--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -1,3 +1,8 @@
-.indicator {
-  opacity: 0;
+:root {
+  --vp-c-brand: #479bf1;
+  --vp-c-brand-dark:  #479bf1;
+  --vp-scroll-bar-track-bg:#efeded;
+  --vp-scroll-bar-thumb-bg:#dfdcdc;
+	--vp-code-line-highlight-color:#d0cece48;
+	--vp-code-line-diff-remove-color: rgba(255, 128, 128, 0.15);
 }
